<resources>
    <string name="app_name">Tasree7a</string>
    <string name="FORGOT_PASSWORD">Forgot password?</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="NEW_USER">New user?</string>
    <string name="LOGIN_WITH_FB">Login with Facebook</string>
    <string name="OR">Or</string>
    <string name="EMAIL">Email</string>
    <string name="CURRENCY">Currency</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="facebook_app_id">442974186045880</string>
    <string name="fb_login_protocol_scheme">fb442974186045880</string>
    <string name="FULL_NAME">Full name</string>
    <string name="USERNAME">Username or Email</string>
    <string name="REGISTER">Register</string>
    <string name="HAVE_ACCOUNT">Have an account?</string>
    <string name="SALLONS">SALONS</string>
    <string name="MENU_SALONS">Salons</string>
    <string name="AR">ع</string>
    <string name="EN">ENG</string>
    <string name="MAP_VIEW">Map view</string>
    <string name="BOOKINGS">Bookings</string>
    <string name="ADD_STAFF">NEW STAFF MEMBER</string>
    <string name="FAVORITES">Favorites</string>
    <string name="FAQs">FAQs</string>
    <string name="FEEDBACK">Feedback</string>

    <string name="LOGOUT">Logout</string>

    <string name="SETTINGS">Settings</string>
    <string name="SEARCH_HINT">Search for salons and cities</string>
    <string name="BOOK">BOOK</string>
    <string name="APPLY">Apply</string>
    <string name="CITY">City</string>
    <string name="SORT_BY">Sort by</string>
    <string name="PRICE">Price</string>
    <string name="DURATION_TIME">Duration Time</string>

    <string name="DISTANCE">Distance</string>
    <string name="RATING">Rating</string>
    <string name="SHOW_ONLY">Show only</string>
    <string name="AVAILABLE_NOW">Available now</string>
    <string name="ALL">All</string>
    <string name="FILTER">Filter</string>
    <string name="APP_FEEDBACK">APP FEEDBACK</string>
    <string name="GALLERY">Gallery</string>
    <string name="ERROR_FIRST_NAME_LAST_NAME">Full name must contain first name, and last name</string>
    <string name="SIGN_UP_ERROR_MISSING_INPUT">Please fill all fields with correct data</string>
    <string name="YOUR_LOCATION">Your location</string>
    <string name="PRODUCTS">Products</string>
    <string name="SERVICES">Services</string>
    <string name="PRODUCT_NAME">Product Name</string>
    <string name="SERVICE_TYPE">Service Type</string>

    <string name="LANGUAGE">Language</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="CHANGE_INFO">Change Information</string>
    <string name="NOTIFICATION">Notifications</string>
    <string name="NOTIFY_FAV_TEXT">Notifie me when my favourites have new update</string>
    <string name="NOTIFY_BOOK_UPDATE_TEXT">Notifie me when my bookings have updates</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="CONFILM_LANG_CHANGE_TITLE">Confirm changing language</string>
    <string name="CONFILM_LANG_CHANGE_TEXT">Are you sure?</string>

    <string name="CUSTOMER_TAB_TITLE">Customer</string>
    <string name="BUSINESS_TAB_TITLE">Business</string>

    <string name="SHOP_NAME_PLACEHOLDER">Salon / Barber shop name</string>
    <string name="OWNER_NAME_PLACEHOLDER">Owner name</string>

    <string name="OLD_PASSWORD">Old Password</string>
    <string name="NEW_PASSWORD">New Password</string>
    <string name="CONFIRM_PASSWORD">Confirm New Password</string>

    <string name="NAME">Name</string>

    <string name="CANCEL">Cancel</string>

    <string name="CHANGE">Change</string>
    <string name="INFORMATION">Information</string>
    <string name="BUSINESS_INFO">Business info</string>
    <string name="SALON_NAME">Salon / Barber shop name</string>
    <string name="ADDRESS">Address</string>
    <string name="MOBILE">Mobile</string>
    <string name="WORKING_DAYS">Working days</string>
    <string name="OPENING_HOURS">Opening hours</string>
    <string name="STAFF">Staff</string>
    <string name="SELECT_SERVICE">Select service</string>
    <string name="AVAILABLE_SERVICE">Available services</string>
    <string name="SELECT_TIME">Select Time </string>
    <string name="SELECT_BARBER">Select Barber</string>

    <string name="TELL_US">Tell us what happened <font color='#FF0000'>*</font></string>
    <string name="REPLAY_MESSAGE">A member of our support staff will respond as
soon as possible</string>
    <string name="ATTACH_IMAGE">Attach image (Image limit:3)</string>
    <string name="SCHEDULE">Schedule</string>
    <string name="CONFIRM">Confirm</string>
    <string name="USER_BOOKINGS">You’ll be notified half an hour before the appointment</string>
    <string name="SUBMIT">Submit</string>
    <string name="BOOKING_ID">Booking ID:</string>

    <string name="TAKE_A_PICTURE">Take a Picture</string>
    <string name="CLOSE">Close</string>
    <string name="ENABLE_LOCATION">Enable location service</string>
    <string name="ATTACH_MESSAGE_HERE">Attach image here</string>
    <string name="CALENDAR">Calendar</string>
    <string name="LOCATION_DISABLED_MESSAGE">Your Location service seems to be disabled, do you want to enable it?</string>
    <string name="CLICK_TO_SELECT_DATE">Click to select date</string>
    <string name="ADD">Add</string>
    <string name="PLUS">+</string>
    <string name="SAVE">Save</string>
    <string name="TOTAL">Total</string>
    <string name="MY_BOOKINGS">My bookings</string>
    <string name="INVALID_EMAIL">The email address you entered is invalid</string>
    <string-array name="DAYS_APPREVIATIONS">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="RESET_PASSWORD">Reset password</string>
    <string name="MY_SALON">My salon</string>
    <string name="NOT_AVAILABLE_TIME">No availability in this time</string>
    <string name="ERROR_EMPTY_SERVICE">You must select at least one service</string>
    <string name="GENDER">Gender</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>
    <string name="dash_separator">-</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_yours">choose your picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="error_provide_full_name">Please Provide a full barber name</string>
    <string name="error_provide_email">Please provide the barber email address</string>
    <string name="error_password_not_match">Barber passwords doesn\'t match</string>
    <string name="error_provide_password">Please write a correct password</string>
    <string name="error_add_barbers">You have to Add 1 Barber at least</string>
    <string name="products_gallery_title">Salon Products</string>
    <string name="error_fill_fields">Please fill all the Fields</string>
    <string name="total_label">Total:</string>
    <string name="from_time">From</string>
    <string name="to_time">To</string>
    <string name="login_error">Wrong email or password</string>
    <string name="sign_up_error">Error registering customer</string>
    <string name="salon_sign_up_error">Error registering salon</string>
    <string name="salon_barbers">Salon Barbers</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="uploading">Uploading...</string>
    <string name="total">Total: %d$</string>
</resources>
