<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:layout_alignParentTop="true"
        android:visibility="visible"
        android:background="@color/WHITE">

        <ImageView
            android:id="@+id/back"
            android:layout_width="31dp"
            android:layout_height="41dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="21dp"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/GRAY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/INFORMATION"
            android:textAllCaps="true"
            android:textColor="@color/APP_TEXT_COLOR"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/BG_GRAY"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/change_image"
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:layout_margin="17dp"
                android:background="@drawable/shadow_bg"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_cam"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19.3sp"
                android:textColor="@color/APP_TEXT_COLOR"
                android:layout_marginLeft="17dp"
                android:text="@string/BUSINESS_INFO"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:orientation="vertical"
                android:background="@drawable/shadow_bg"
                >

                <EditText
                    android:id="@+id/salon_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/SALON_NAME"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/APP_TEXT_COLOR"
                    android:textColor="@color/APP_TEXT_COLOR"
                    />

                <EditText
                    android:id="@+id/owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/OWNER_NAME_PLACEHOLDER"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/APP_TEXT_COLOR"
                    android:textColor="@color/APP_TEXT_COLOR"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/EMAIL"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/APP_TEXT_COLOR"
                    android:textColor="@color/APP_TEXT_COLOR"
                    />

                <EditText
                    android:id="@+id/currency"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/CURRENCY"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/APP_TEXT_COLOR"
                    android:textColor="@color/APP_TEXT_COLOR"
                    android:drawableRight="@drawable/ic_dropdown_arrow"
                    />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/ADDRESS"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/APP_TEXT_COLOR"
                    android:textColor="@color/APP_TEXT_COLOR"
                    />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/MOBILE"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="25dp"
                    android:textColorHint="@color/APP_TEXT_COLOR"
                    android:textColor="@color/APP_TEXT_COLOR"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19.3sp"
                android:textColor="@color/APP_TEXT_COLOR"
                android:layout_marginLeft="17dp"
                android:text="@string/WORKING_DAYS"
                />

            <com.tasree7a.CustomComponent.CustomCheckableGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:background="@drawable/shadow_bg"
                android:gravity="center"
                android:padding="9dp"
                >

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="true"
                    app:customCheckboxText="@string/SAT"
                    />

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="true"
                    app:customCheckboxText="@string/SUN"
                    />

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="false"
                    app:customCheckboxText="@string/MON"
                    />

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="true"
                    app:customCheckboxText="@string/TUE"
                    />

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="true"
                    app:customCheckboxText="@string/WED"
                    />

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="true"
                    app:customCheckboxText="@string/THU"
                    />

                <com.tasree7a.CustomComponent.CircularCheckBox
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="6dp"
                    app:setChecked="true"
                    app:customCheckboxText="@string/FRI"
                    />

            </com.tasree7a.CustomComponent.CustomCheckableGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19.3sp"
                android:textColor="@color/APP_TEXT_COLOR"
                android:layout_marginLeft="17dp"
                android:text="@string/OPENING_HOURS"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:background="@drawable/shadow_bg"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="17dp"
                >

                <TextView
                    android:id="@+id/from_hours"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="34dp"
                    android:background="@drawable/rounded_corders_bg"
                    android:gravity="center"
                    android:textColor="@color/WHITE"
                    android:textSize="15sp"
                    android:text="10:00 AM"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/APP_BLACK"
                    android:text="-"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/to_hours"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="34dp"
                    android:background="@drawable/rounded_corders_bg"
                    android:gravity="center"
                    android:textColor="@color/WHITE"
                    android:textSize="15sp"
                    android:text="11:00 PM"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19.3sp"
                android:textColor="@color/APP_TEXT_COLOR"
                android:layout_marginLeft="17dp"
                android:text="@string/STAFF"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                >

                <com.tasree7a.CustomComponent.SalonStaffContainer
                    android:id="@+id/salon_staff_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>