<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/BG_GRAY">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/WHITE">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/GRAY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ADD_STAFF"
            android:textAllCaps="true"
            android:textColor="@color/APP_TEXT_COLOR"
            android:textSize="19.3sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/barber_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/NAME"
            android:textSize="14.8sp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="108dp"
            android:textColorHint="@color/BLACK"
            android:textColor="@color/BLACK"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/barber_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/EMAIL"
            android:textSize="14.8sp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="13dp"
            android:textColorHint="@color/BLACK"
            android:textColor="@color/BLACK"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/barber_password"
            android:layout_width="match_parent"
            android:hint="@string/PASSWORD"
            android:layout_height="40dp"
            android:textSize="14.8sp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="13dp"
            android:textColorHint="@color/BLACK"
            android:textColor="@color/BLACK"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/barber_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/CONFIRM_PASSWORD"
            android:textSize="14.8sp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="13dp"
            android:textColorHint="@color/BLACK"
            android:textColor="@color/BLACK"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.tasree7a.customcomponent.CustomButton
            android:id="@+id/cancel_barber"
            android:layout_width="145dp"
            android:layout_height="56dp"
            android:layout_marginRight="26dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/shadow"
            android:paddingBottom="10dp"
            app:customButtonRadius="20"
            app:customButtonText="@string/CANCEL"
            app:customButtonTextColor="@color/WHITE"
            app:customButtonTextSize="19sp"/>


        <com.tasree7a.customcomponent.CustomButton
            android:id="@+id/add_barber"
            android:layout_width="145dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/shadow2"
            android:paddingBottom="10dp"
            app:customButtonRadius="20"
            app:customButtonText="@string/ADD"
            app:customButtonTextColor="@color/WHITE"
            app:customButtonTextSize="19sp"/>

    </LinearLayout>


</RelativeLayout>